--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.14.0",
+    "react-icons": "^4.3.1",
     "react-loading-skeleton": "^3.0.2",
     "react-router": "^6.2.1",
     "react-router-dom": "^5.3.0",
